--- a/build.gradle
+++ b/build.gradle
@@ -69,10 +69,17 @@ dependencies {
     testCompile 'com.ninja-squad:DbSetup-kotlin:2.1.0'
     testCompile('org.junit.jupiter:junit-jupiter-api:5.2.0')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.9'
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "PASSED", "FAILED", "SKIPPED"
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
 }
 
 compileKotlin {
