move kotlintest to branch

--- a/build.gradle
+++ b/build.gradle
@@ -67,10 +67,9 @@ dependencies {
     compile "ch.qos.logback:logback-classic:1.2.3"
 
     testCompile 'com.ninja-squad:DbSetup-kotlin:2.1.0'
+    // junit5
     testCompile('org.junit.jupiter:junit-jupiter-api:5.2.0')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
-
-    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.9'
 }
 
 test {
