--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
     }
 
     application {
-        modules = [ com.maeharin.factlin_sample.MainKt.main ]
+        modules = [ com.maeharin.factlin_sample.MainKt.module ]
     }
 }
